# aca-dlis

./: CMakeLists.txt  README.md
apex/: CMakeLists.txt  run.sh  run_time_aca.sh  total.sh
apex/plots/.ipynb_checkpoints/: ac_time_eval-checkpoint.ipynb
apex/src/: tree.h
apex/src/benchmark/: flags.h  main.cpp  operation.h  utils.h
apex/src/core/: apex.h  apex_nodes.h
apex/src/util/: allocator.h
attack/: attack.h
scripts/: populate_graybox_dataset.py  run_space_aca_dn_graybox.sh  run_space_aca_dn_whitebox.sh  run_space_aca_in_blackbox.sh  run_time_aca_blackbox.sh  run_time_aca_graybox.sh  run_time_aca_legit.sh  run_time_aca_whitebox.sh
src/benchmark/: example.cpp  lis.cpp  lis_comp_root.cpp  main.cpp.ori  noattack.cpp  space_aca_dn.cpp  space_aca_in.cpp  time_aca_blackbox.cpp  time_aca_graybox.cpp  time_aca_whitebox.cpp  utils.h
src/core/: alex.h  alex_base.h  alex_fanout_tree.h  alex_nodes.h  leap_util.h
src/examples/: main.cpp
test/: unittest_alex.h  unittest_attack.h  unittest_main.cpp
